Now a working plugin.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ name = "callc"
 version = "0.0.1"
 authors = ["Dylan Ede <dylanede@googlemail.com>"]
 
-plugin="true"
+[lib]
+name = "callc"
+crate-type = ["dylib"]
+plugin = true
